--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ body{
     font-size: 16px;
     color: black;
 }
+.section{
+    width: 1440px;
+}
 .container{
     max-width: 1200px;
     margin: auto;
@@ -57,4 +60,213 @@ body{
     background: white;
     border-radius: 6px;
     color: black;
+}
+.main-section{
+    background: url('../img/Rectangle.jpg') no-repeat center center;
+    
+    height: 800px;
+}
+.main-title{
+    margin-top: 122px;
+    margin-bottom: 43px;
+    font-size: 76px;
+    line-height: 76px;
+}
+.description{
+    width: 710px;
+    font-size: 24px;
+    line-height: 33px;
+    margin-bottom: 51px;
+}
+.button{
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+}
+.button-start{
+    margin-right: 57px;
+}
+.web-img{
+    height: 700px;
+    position: relative;
+}
+.webfront{
+    position: absolute;
+    margin-left: 19px;
+    margin-right: 269px;
+    transform: translateY(-133px);
+    z-index: 29;
+}
+.webback{
+    position: absolute;
+    margin-left: 374px;
+    margin-right: 67px;
+    z-index: 8;
+    transform: translateY(-90px)
+}
+.companies{
+    text-align: center;
+    margin-top: 77px;
+}
+.companies-text{  
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 51px;
+}
+.icons:not(:last-child){
+    margin-right: 96px;
+}
+.design_container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 188px;
+}
+.design_column{
+    width: 588px;
+}
+.design_title{
+    font-size: 32px;
+    line-height: 36px;
+    margin-top: 15px;
+}
+.design_text{
+    font-size: 17px;
+    line-height: 24px;
+    margin-top: 15px;
+    width: 522px;
+    height: 72px;
+}
+.design_subtext{
+    font-size: 17px;
+    line-height: 24px;
+    margin-top: 47px;
+}
+.design_pre-text{
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #FF7843;
+}
+.designer-text{
+    margin-top: 73px;
+    width: 588px;
+    height: 280px;
+    background: url('../img/background-tools.jpg') no-repeat;
+}
+.desiner-words{
+    padding: 41px 60px 23px 32px;
+    font-size: 24px;
+    line-height: 32px;
+    color: #FFFFFF;
+    margin: 0;
+}
+.desiner-name{
+    font-size: 17px;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin: 0;
+    padding-left: 32px;
+}
+.collaborate-info{
+    width: 1440px;
+    height: 480px;
+    background: url(../img/background-collaborate.jpg) no-repeat;
+    display: flex;
+    margin-bottom: 24px;
+}
+.collaborate_image{
+    margin-top: 30px;
+}
+.collaborate_text-info{
+    margin-left: 18px;
+    margin-right: 205px;
+    margin-top: 127px;
+}
+.colaborate_pre-title{
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #B2F0EC;
+    margin: 0;
+}
+.collaborate_title{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 32px;
+    line-height: 36px;
+}
+.collaborate_text{
+    font-size: 17px;
+    line-height: 24px;
+    color: rgba(33, 33, 35, 0.7);
+    margin: 0;
+}
+.collaborate_subtext{
+    margin-top: 23px;
+}
+.collaborate_column{
+    width: 588px;
+    height: 611px;
+}
+.collaborate_columns{
+    display: flex;
+    justify-content: space-between;
+}
+.column-first{
+    background: url('../img/bg-engineer.jpg') no-repeat;
+}
+.engineer{
+    padding: 163px 45px 160px 32px;
+}
+.engineer-text{
+    font-size: 24px;
+    line-height: 32px;
+}
+.engineer-name, .engineer-prof{
+    font-size: 17px;
+    line-height: 24px;
+}
+.engineer-prof{
+    width: 372px;
+    margin: 0;
+}
+.engineer-name{
+    margin-top: 54px;
+    margin-bottom: 0;
+}
+.workspace{
+    padding-left: 32px;
+}
+.workspace_image{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+.workspace_pre-title{
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #3FB2A5;
+    margin-top: 39px;
+    margin-bottom: 15px;
+}
+.workspace_title{
+    font-size: 32px;
+    line-height: 36px;
+    margin: 0;
+    width: 394px;
+}
+.workspace_text{
+    font-size: 17px;
+    line-height: 24px;
+    color: rgba(33, 33, 35, 0.7);
+    margin-top: 15px;
+    margin-bottom: 23px;
+    width: 522px;
+}
+.workspace_subtext{
+    font-size: 17px;
+    line-height: 24px;
+    margin: 0;
 }
